[tool.poetry]
name = "tjsp-monitorv2"
version = "0.1.0"
description = ""
authors = ["Enrico Marquez <enricovmarquezz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.32.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
